Make success buttons readable inside notifications. Fixes #342

--- a/styles/notifications.less
+++ b/styles/notifications.less
@@ -84,6 +84,10 @@ atom-notification {
             overflow: hidden;
             text-overflow: ellipsis;
             color: @text-color;
+
+            &-success, &-primary {
+                color: #FFF;
+            }
         }
     }
     &.success {
